<resources>
    <!--App Title-->
    <string name="app_name">LyricsFlowApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Lading Page Fragment-->
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>

    <!--Login Fragment-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_hint">email@email.com</string>
    <string name="password">Password</string>
    <string name="password_hint">******</string>
    <string name="forgot_password">Forgot password ?</string>

    <!--    Register Account Fragment-->
    <string name="register_account">Register Account</string>
    <string name="create_account">Create Account</string>

    <!--Recover Account Fragment-->
    <string name="recover_account">Recover Account</string>
    <string name="send">Send</string>
    <string name="username">Username</string>
    <string name="type_your_username">Type your username</string>

    <!-- Home Screen -->
    <string name="welcome">Welcome</string>
    <string name="get_songs">Get Songs</string>
    <string name="history">History</string>
    <string name="spotify">Spotify</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Messages for generic alert dialog -->
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="okay">Okay</string>

    <!-- Messages for ERROR alert dialog -->
    <string name="error_icon">Error Icon</string>
    <string name="error">Error</string>
    <string name="place_here_the_error_message">Place here the error message !</string>

    <!-- Messages for SUCCESS alert dialog -->
    <string name="success_icon">Success Icon</string>
    <string name="success">Success</string>
    <string name="transaction_completed_successfully">Transaction Completed Successfully!</string>

    <!-- Messages for WARNING alert dialog -->
    <string name="warning_icon">Warning Icon</string>
    <string name="attention">Attention</string>
    <string name="place_here_the_delete_message">Place here the error message !</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Report Bug Messages -->
    <string name="type_the_bug_below">Type the Bug below</string>
    <string name="type_here">Type Here</string>

    <!-- Change Username -->
    <string name="change_username">Change Username</string>
    <string name="new_username">New Username</string>
    <string name="update">Update</string>
    <string name="enter_your_password">Enter your password</string>
</resources>