<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.auth.RegisterAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/montserrat_bold"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/username"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/createAccUsernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:hint="@string/type_your_username"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/createAccEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/input_bg"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/password"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/createAccPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:background="@drawable/input_bg"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/registerAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/register_account"
                android:textAllCaps="false"
                app:backgroundTint="@null" />
            
            <ProgressBar
                android:id="@+id/createAccProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="invisible"
                tools:visibility="visible"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>