<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.LoginFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/goBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_go_back"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_gravity="start|center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="Login"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/email"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/loginEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/input_bg"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/password"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/loginPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_bg"
                android:hint="@string/password_hint"
                android:padding="16dp"
                android:textSize="14sp"
                android:autofillHints="password"
                android:inputType="textPassword" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/forgotPasswordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="8dp"
                    android:layout_gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="#E0E0E1"
                    android:fontFamily="@font/montserrat_bold"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/login"
                android:textAllCaps="false"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/loginProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:layout_marginTop="16dp"
                android:visibility="invisible"
                tools:visibility="visible"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
