<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#121212">

    <!-- Logout Button -->
    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logout"
        android:background="@android:color/transparent"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="18sp"
        android:textColor="#D1D1D1"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!-- User Name -->
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_below="@id/tvWelcomeBack"
        android:layout_marginTop="6dp"
        android:layout_centerHorizontal="true" />

    <!-- Centralizing Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <!-- Grid Layout for Buttons -->
        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_marginTop="56dp"
            android:alignmentMode="alignMargins"
            android:rowOrderPreserved="false">

            <!-- Recommendation Button -->
            <LinearLayout
                android:id="@+id/getSongsBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:background="@drawable/button_bg"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_songs"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_recommendation"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <!-- History Button -->
            <LinearLayout
                android:id="@+id/historyBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:background="@drawable/button_bg"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_history"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <!-- Spotify Integration -->
            <LinearLayout
                android:id="@+id/spotifyBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:background="@drawable/button_bg"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spotify"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_spotify"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <!-- Settings Button -->
            <LinearLayout
                android:id="@+id/settingsBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:background="@drawable/button_bg"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </GridLayout>

        <!-- Need Help Text -->
        <TextView
            android:id="@+id/helpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Need any help?"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="#D1D1D1"
            android:textSize="18sp"
            android:layout_marginTop="48dp"
            android:layout_gravity="center" />

        <!-- Tutorial Text (Clickable) -->
        <TextView
            android:id="@+id/tutorialBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go to the tutorial"
            android:textColor="#9DD69B"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_info"
            android:drawablePadding="8dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:fontFamily="@font/montserrat_bold"/>

    </LinearLayout>
</RelativeLayout>
